[tool.poetry]
name = "crewai-finance"
version = "0.1.0"
description = "Agentic AI system to analyze financial news and provide investment recommendations using CrewAI."
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [
    { include = "crewai", from = "src" }
]

[tool.poetry.urls]
Homepage = "https://your-finance-app.com"
Documentation = ""
Repository = ""

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = "^0.28.8"
openai = "^1.13.3"
langchain = "^0.1.10"
langchain_groq = "^0.1.3"
python-dotenv = "^1.0.0"
python-decouple = "^3.6"
requests = "^2.31.0"
yfinance = "^0.2.37"          # Optional: For finance data
serper = "^0.2.0"             # Optional: If using Serper API for news
pydantic = "^2.4.2"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
pyright = "^1.1.350"
autoflake = "^2.2.1"
pre-commit = "^3.6.0"
pytest = "^8.0.0"

[tool.isort]
profile = "black"
known_first_party = ["crewai"]

[tool.poetry.scripts]
crewai = "crewai.cli.cli:crewai"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
